--- a/eZcart/templates/base.html
+++ b/eZcart/templates/base.html
@@ -40,6 +40,9 @@
   <!--===============================================================================================-->
   {% block style %}{% endblock style %}
   <!--===============================================================================================-->
+  <style>
+    
+  </style>
 </head>
 
 <body class="animsition">
@@ -131,37 +134,35 @@
             </div>
 
             <!-- Cart Button -->
-            <div id="cartBtn"
-                class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti {% if request.user.is_authenticated %} js-show-cart {% endif %}"
-                data-notify="2">
+            <div id="cartBtn1"
+                class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti {% comment %} {% if request.user.is_authenticated %} js-show-cart {% endif %}{% endcomment %}" data-notify="2">
                 <i class="zmdi zmdi-shopping-cart"></i>
             </div>
 
             <!-- Wishlist Button -->
-            <a href="#" id="wishlistBtn" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti"
+            <a href="#" id="wishlistBtn1" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti"
                 data-notify="0">
                 <i class="zmdi zmdi-favorite-outline"></i>
             </a>
 
-            <!-- Bootstrap Login Modal -->
-            <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel"
-                aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered" role="document">
-                    <div class="modal-content text-center">
-                        <div class="modal-header">
-                            <h5 class="modal-title w-100" id="loginModalLabel">Login Required</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body">
-                            <p class="stext-102 cl6">⚠️ You need to log in to access this feature.</p>
-                        </div>
-                        <div class="modal-footer">
-                            <a href="{% url 'login_user' %}" class="btn btn-primary w-100">Login</a>
-                        </div>
-                    </div>
-                </div>
+            <!-- Bootstrap Login Modal for Desktop -->
+            <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
+              <div class="modal-dialog modal-dialog-centered" role="document">
+                  <div class="modal-content text-center">
+                      <div class="modal-header">
+                          <h5 class="modal-title w-100" id="loginModalLabel">Login Required</h5>
+                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                              <span aria-hidden="true">&times;</span>
+                          </button>
+                      </div>
+                      <div class="modal-body">
+                          <p class="stext-102 cl6">⚠️ You need to log in to access this feature.</p>
+                      </div>
+                      <div class="modal-footer">
+                          <a href="{% url 'login_user' %}" class="btn btn-primary w-100">Login</a>
+                      </div>
+                  </div>
+              </div>
             </div>
 
           </div>
@@ -182,13 +183,16 @@
           <i class="zmdi zmdi-search"></i>
         </div>
 
-        <div class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti js-show-cart" data-notify="2">
-          <i class="zmdi zmdi-shopping-cart"></i>
+        <!-- Cart Button -->
+        <div id="cartBtn2"
+            class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti {% comment %} {% if request.user.is_authenticated %} js-show-cart {% endif %}{% endcomment %}" data-notify="2">
+            <i class="zmdi zmdi-shopping-cart"></i>
         </div>
 
-        <a href="#" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti"
-          data-notify="0">
-          <i class="zmdi zmdi-favorite-outline"></i>
+        <!-- Wishlist Button -->
+        <a href="#" id="wishlistBtn1" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti"
+        data-notify="0">
+        <i class="zmdi zmdi-favorite-outline"></i>
         </a>
       </div>
 
@@ -649,31 +653,38 @@
   <!--===============================================================================================-->
   <!-- Your Login & Redirect Script -->
   <script>
-      var $jq = jQuery.noConflict();  // Ensure jQuery compatibility
-  
-      $jq(document).ready(function () {
-          var isLoggedIn = "{{ request.user.is_authenticated }}" === "True";
-  
-          function checkLoginAndRedirect(targetUrl) {
-              if (isLoggedIn) {
-                  window.location.href = targetUrl;  // Redirect to given URL
-              } else {
-                  $jq("#loginModal").modal("show");  // Show login modal
-              }
-          }
-  
-          // Wishlist Click Event
-          $jq("#wishlistBtn").click(function (e) {
-              e.preventDefault();  // Prevent default <a> behavior
-              checkLoginAndRedirect("whishlist");
-          });
-  
-          // Cart Click Event
-          $jq("#cartBtn").click(function () {
-              checkLoginAndRedirect("shoping-cart");      // <-- comment this line for cart modal view
-          });
-      });
-  </script>
+    var $jq = jQuery.noConflict();  // Ensure jQuery compatibility
+
+    $jq(document).ready(function () {
+        var isLoggedIn = "{{ request.user.is_authenticated }}" === "True";
+
+        function checkLoginAndRedirect(targetUrl) {
+            if (isLoggedIn) {
+                window.location.href = targetUrl;  // Redirect to the given URL
+            } else {
+                console.log("User not logged in, showing login modal...");
+                if (window.innerWidth <= 990) {  // For mobile screens
+                    console.log("mobile login modal");
+                    window.location.href = "login_user";
+                } else {  // For larger screens (desktops)
+                    $jq('#loginModal').modal('show');  // Show main login modal
+                }
+            }
+        }
+
+        // Wishlist Click Event
+        $jq("#wishlistBtn1, #wishlistBtn2").click(function (e) {
+            e.preventDefault();  // Prevent default <a> behavior
+            checkLoginAndRedirect("whishlist");
+        });
+
+        // Cart Click Event (for both cart buttons)
+        $jq("#cartBtn1, #cartBtn2").click(function () {
+            checkLoginAndRedirect("shoping-cart");  // <-- comment this line for cart modal view
+        });
+    });
+</script>
+
   <!--===============================================================================================-->
   <script src="{% static 'js/main.js' %}"></script>
   <!--===============================================================================================-->
@@ -720,7 +731,7 @@
             row += `<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
                 <div class="block2">
                   <div class="block2-pic hov-img0">
-                    <img src="${rt.cproducts[i].productImage.url}" alt="IMG-PRODUCT" style="height:340.35px ;">
+                    <a href="product-detail?id=${rt.cproducts[i].productId}"> <img src="${rt.cproducts[i].productImage.url}" alt="IMG-PRODUCT" style="height:360.35px ;"> </a>
                     <a href="product-detail?id=${rt.cproducts[i].productId}" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1">
                       Quick View
                     </a>
@@ -756,7 +767,7 @@
             row += `<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
                 <div class="block2">
                   <div class="block2-pic hov-img0">
-                    <img src="${rt.cproducts[i].productImage.url}" alt="IMG-PRODUCT" style="height:340.35px;">
+                    <a href="product-detail?id=${rt.cproducts[i].productId}"> <img src="${rt.cproducts[i].productImage.url}" alt="IMG-PRODUCT" style="height:360.35px;"> </a>
                     <a href="product-detail?id=${rt.cproducts[i].productId}" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1">
                       Quick View
                     </a>
